hphp/test/zend/bad/ext/date/tests/bug65502.php
<?php
echo get_class(DateTimeImmutable::createFromFormat('j-M-Y', '12-Sep-2013'));
?>